[gd_scene load_steps=22 format=3 uid="uid://oe4sslqppx1d"]

[ext_resource type="Script" path="res://root.gd" id="1_8x3pu"]
[ext_resource type="Script" path="res://background/background_manager.gd" id="2_31ily"]
[ext_resource type="Texture2D" uid="uid://cpabv4d3ncwhy" path="res://resources/images/backgrounds/Screen_Computer__Informant_None__Notebook_Desk.png" id="3_6djuq"]
[ext_resource type="Texture2D" uid="uid://dreh5ktpvc7ut" path="res://resources/images/backgrounds/Screen_Television__Informant_None.png" id="4_jmql8"]
[ext_resource type="PackedScene" uid="uid://cfot00bpjagtg" path="res://audio/audio_manager.tscn" id="5_uhy31"]
[ext_resource type="Script" path="res://informant/informant_manager.gd" id="6_xdwfw"]
[ext_resource type="Script" path="res://speech_bubbles/speech_bubble_manager.gd" id="7_6qerp"]
[ext_resource type="PackedScene" uid="uid://bnfqg1grhhvde" path="res://speech_bubbles/speech_bubble_spawner.tscn" id="8_c3d6l"]
[ext_resource type="Script" path="res://stocks.gd" id="9_l4kpk"]
[ext_resource type="PackedScene" uid="uid://b7px1dwva0wpc" path="res://stock_instance.tscn" id="10_aym7x"]
[ext_resource type="PackedScene" uid="uid://cxftc47nig0qy" path="res://television.tscn" id="11_i20je"]
[ext_resource type="PackedScene" uid="uid://dkxorndbow4gi" path="res://radio.tscn" id="12_t66tu"]
[ext_resource type="PackedScene" uid="uid://bjr4rcfjctq5c" path="res://informant.tscn" id="13_vnexo"]
[ext_resource type="Texture2D" uid="uid://dtr2t2oc3n267" path="res://Sprites/Informant.png" id="14_ak2bd"]
[ext_resource type="PackedScene" uid="uid://du1lghvesfk5d" path="res://prices_display.tscn" id="15_nj8lx"]
[ext_resource type="PackedScene" uid="uid://cyixc4dt4iwpt" path="res://main.tscn" id="16_aklsf"]
[ext_resource type="Script" path="res://custom_camera_2d.gd" id="17_1u25h"]
[ext_resource type="PackedScene" uid="uid://bd784bcihsjhm" path="res://timer/game_timer.tscn" id="18_0bya6"]
[ext_resource type="PackedScene" uid="uid://dhnpxedauxc14" path="res://notebook.tscn" id="19_0i01a"]
[ext_resource type="PackedScene" uid="uid://dtaedowfeugv" path="res://notebook/notebook_manager.tscn" id="20_j4tck"]
[ext_resource type="PackedScene" uid="uid://ghadtt162jll" path="res://ui/ui_manager.tscn" id="21_frrc2"]

[node name="Root" type="Node"]
script = ExtResource("1_8x3pu")

[node name="BackgroundManager" type="Node" parent="."]
script = ExtResource("2_31ily")

[node name="TheDarknessBehindItAll" type="Node" parent="BackgroundManager"]

[node name="ColorRect" type="ColorRect" parent="BackgroundManager/TheDarknessBehindItAll"]
z_index = -4096
offset_left = -308.0
offset_top = -223.0
offset_right = 11813.0
offset_bottom = 2439.0
color = Color(0, 0, 0, 1)

[node name="ComputerView" type="Node" parent="BackgroundManager"]

[node name="TextureRect" type="TextureRect" parent="BackgroundManager/ComputerView"]
offset_right = 3840.0
offset_bottom = 2160.0
texture = ExtResource("3_6djuq")

[node name="TelevisionView" type="Node" parent="BackgroundManager"]

[node name="TextureRect" type="TextureRect" parent="BackgroundManager/TelevisionView"]
offset_left = 7680.0
offset_right = 11520.0
offset_bottom = 2160.0
texture = ExtResource("4_jmql8")

[node name="AudioManager" parent="." instance=ExtResource("5_uhy31")]

[node name="InformantManager" type="Node" parent="."]
script = ExtResource("6_xdwfw")

[node name="SpeechBubbleManager" type="Node" parent="."]
script = ExtResource("7_6qerp")

[node name="Radio" parent="SpeechBubbleManager" instance=ExtResource("8_c3d6l")]
offset_left = 7695.0
offset_top = -539.0
offset_right = 8417.0
offset_bottom = -24.0

[node name="Television" parent="SpeechBubbleManager" instance=ExtResource("8_c3d6l")]
offset_left = 7335.0
offset_top = -212.0
offset_right = 8125.0
offset_bottom = 299.0
identity = 1

[node name="Informant_Computer" parent="SpeechBubbleManager" instance=ExtResource("8_c3d6l")]
offset_left = -1766.0
offset_top = 433.0
offset_right = -865.0
offset_bottom = 933.0
identity = 2

[node name="Informant_Window" parent="SpeechBubbleManager" instance=ExtResource("8_c3d6l")]
offset_left = 993.0
offset_top = -558.0
offset_right = 1493.0
offset_bottom = -308.0
identity = 3

[node name="Informant_Plants" parent="SpeechBubbleManager" instance=ExtResource("8_c3d6l")]
offset_left = 6953.0
offset_top = -480.0
offset_right = 7453.0
offset_bottom = -230.0
identity = 4

[node name="Stocks" type="Node" parent="."]
script = ExtResource("9_l4kpk")

[node name="ActiveStocks" type="Node" parent="Stocks"]

[node name="Tech" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="Business" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="Consumer_Goods" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="Energy_Water" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="Finance" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="Healthcare" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="Hospitality" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="Manufacturing" parent="Stocks/ActiveStocks" instance=ExtResource("10_aym7x")]

[node name="TV" parent="." instance=ExtResource("11_i20je")]
offset_left = 10450.0
offset_top = 1126.0
offset_right = 10658.0
offset_bottom = 1334.0

[node name="Radio" parent="." instance=ExtResource("12_t66tu")]
offset_left = 10601.0
offset_top = 637.0
offset_right = 10809.0
offset_bottom = 845.0
scale = Vector2(1.04538, 0.861223)

[node name="Informant" parent="." instance=ExtResource("13_vnexo")]
offset_left = 8612.0
offset_top = 625.0
offset_right = 8820.0
offset_bottom = 833.0
icon = ExtResource("14_ak2bd")

[node name="PricesDisplay" parent="." instance=ExtResource("15_nj8lx")]
visible = false

[node name="Menus" parent="." instance=ExtResource("16_aklsf")]
visible = false
z_index = 1000

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("17_1u25h")

[node name="GameTimer" parent="Camera2D" instance=ExtResource("18_0bya6")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1595.0
offset_right = 2245.0
offset_bottom = 150.0
grow_horizontal = 2

[node name="Notebook" parent="." instance=ExtResource("19_0i01a")]
offset_left = 3196.0
offset_top = 1429.0
offset_right = 3332.0
offset_bottom = 1565.0

[node name="NotebookManager" parent="." instance=ExtResource("20_j4tck")]

[node name="UIManager" parent="." instance=ExtResource("21_frrc2")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
